# ersteingabe_lead

./: .gitignore  README.md  pyproject.toml  scripts_to_json.py
.devcontainer/: Dockerfile  Dockerfile.devcontainer  aliases.sh  devcontainer.json  docker-compose.yml  frappe_docker-reinstall.sh  initBench.sh  installApp.sh  updateDockerFile.sh
.devcontainer/development/: frappe_docker-installApp.sh  frappe_docker-reinstall.sh
.github/workflows/: ci.yml
ersteingabe_lead/: hooks.py  modules.txt
ersteingabe_lead/config/: desktop.py  docs.py
ersteingabe_lead/ersteingabe_lead/doctype/ersteingabe_lead/: ersteingabe_lead.js  ersteingabe_lead.json  ersteingabe_lead.py  test_ersteingabe_lead.py
ersteingabe_lead/ersteingabe_lead/doctype/ersteingabe_lead_az_it/: ersteingabe_lead_az_it.js  ersteingabe_lead_az_it.json  ersteingabe_lead_az_it.py  test_ersteingabe_lead_az_it.py
ersteingabe_lead/fixtures/: server_script.json
ersteingabe_lead/server_scripts/: Ersteingabe Lead Script.py
